// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Should render the component with the personalized Image 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://image.jpg"
/>
`;

exports[`ProductImage Should show the default product image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
